--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/person?useSSL=false&serverTimezone=UTC
+spring.datasource.url =jdbc:mysql://localhost:3306/person
+
 spring.datasource.username = root
 spring.datasource.password = test
 
@@ -10,3 +11,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 server.port=8085
+
+
